Fix bug DNN-4058: update the style of upload file button to align with text.

--- a/DNN Platform/Modules/Journal/module.css
+++ b/DNN Platform/Modules/Journal/module.css
@@ -240,7 +240,7 @@ div#journalOptionArea div.journal_onlineFileShare a.dnnSecondaryAction {
 
 div#journalOptionArea div.journal_localFileShare .dnnInputFileWrapper {
     display: inline-block;
-    margin: 15px 0 0 -10px;
+    margin: 15px 0 0 0;
 }
 /* Search Suggest */
 ul.ui-autocomplete, 
